# gitting_rent

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
contracts/notary-condition/: Cargo.toml  build.rs
contracts/notary-condition/src/: lib.rs
prisma/: schema.prisma
prisma/migrations/20260228000000_init_lease_schema/: migration.sql
prisma/migrations/20260301000641_01032026/: migration.sql
scripts/: build-notary-wasm.ts  generate-wallets.ts  test-flow.ts
src/: env.js
src/app/: constants.ts  layout.tsx  page.tsx
src/app/api/uploadthing/: route.ts
src/app/dashboard/: page.tsx
src/app/dashboard/_components/: EscrowCancelFlow.tsx  EscrowCreateFlow.tsx  EscrowFinishFlow.tsx  LandlordView.tsx  LeaseCard.tsx  MoveOutFlow.tsx  NotaryView.tsx  TenantView.tsx
src/app/ui/: address-chip.tsx  audit-panel.tsx  other-lease-row.tsx  photo-strip.tsx  photo-uploader.tsx  row.tsx  uploadthing.ts
src/components/ui/: background-paths.tsx  button.tsx  wave-background.tsx
src/context/: WalletContext.tsx
src/lib/: uploadthing.ts
src/server/: db.ts
src/server/api/: root.ts  trpc.ts
src/server/api/routers/lease/: approve.ts  create.ts  escrow.ts  evidence.ts  index.ts  queries.ts
src/server/auth/: config.ts
src/server/uploadthing/: core.ts
src/server/xrpl/: client.ts  condition.ts  payloads.ts
src/types/: lease.ts  role.ts  step.ts
